--- a/src/js/templates/dashboard.hbs
+++ b/src/js/templates/dashboard.hbs
@@ -1,6 +1,11 @@
 <style>
     .fx-ds-item { width: 50%; }
     .fx-ds-item.w2 { width: 100%; }
+
+    /*TODO: move it from here*/
+    /*.fx-map-chart {*/
+        /*width: 100%;*/
+    /*}*/
 </style>
 
 <div class="row">
