--- a/src/js/templates/item.hbs
+++ b/src/js/templates/item.hbs
@@ -1,2 +1,2 @@
-<div class="fx-ds-item {{ class }}" style="height: {{height}} ">
+<div class="{{class}}" style="height: {{height}}"  id="{{id}}">
 </div>
