--- a/src/js/templates/item.hbs
+++ b/src/js/templates/item.hbs
@@ -1,2 +1,2 @@
-<div class="{{class}}" style="height: {{height}}"  id="{{id}}">
+<div class="{{class}}" {{#if height}}style="height:{{height}}"{{/if}} id="{{id}}">
 </div>
